test/files/neg/hk-bad-bounds.check
hk-bad-bounds.scala:4: error: can't existentially abstract over parameterized type _1[X]
  def f(x: Boolean) = if (x) (null: SeqFactory[List]) else (null: SeqFactory[Set])
                      ^
1 error
